# SAUVC2019-ROS

./: README.md  push2robot.sh
bubbles_control/launch/: base.launch
bubbles_control/src/: base_strategy.py  sauvc2019_final.py
bubbles_cv/: CMakeLists.txt  package.xml
bubbles_cv/launch/: flare_tracker.launch  gate_tracker.launch  launch_all.launch
bubbles_hardware/arduino/mcu/: mcu.ino
bubbles_hardware/launch/: basic_teleop.launch  bubbles_hardware.launch  cameras.launch  imu.launch  mcu.launch
bubbles_hardware/scripts/: basic_teleop.py  thruster_manager.py
bubbles_localization/: CMakeLists.txt  package.xml
bubbles_localization/launch/: localization.launch  optical_flow.launch  optical_odometer.launch
bubbles_localization/scripts/: optical_flow.py
bubbles_pid/: CMakeLists.txt  package.xml
bubbles_pid/launch/: bubbles_pid.launch
bubbles_pid/scripts/: bubbles_pid.py  setpoint_once.py  teleop_joystick.py
bubbles_sensors/: CMakeLists.txt  package.xml
bubbles_sensors/launch/: state_publisher.launch
bubbles_sensors/scripts/: state_publisher.py
